@@ -249,10 +249,16 @@ int
 rt_bot_prep(struct soltab *stp, struct rt_db_internal *ip, struct rt_i *rtip)
 {
     struct rt_bot_internal *bot_ip;
+    size_t rt_bot_mintie;
 
     RT_CK_DB_INTERNAL(ip);
     bot_ip = (struct rt_bot_internal *)ip->idb_ptr;
     RT_BOT_CK_MAGIC(bot_ip);
+
+    rt_bot_mintie = RT_DEFAULT_MINTIE;
+    if (getenv("LIBRT_BOT_MINTIE")) {
+	rt_bot_mintie = atoi(getenv("LIBRT_BOT_MINTIE"));
+    }
 
     if (rt_bot_mintie > 0 && bot_ip->num_faces >= rt_bot_mintie /* FIXME: (necessary?) && (bot_ip->face_normals != NULL || bot_ip->orientation != RT_BOT_UNORIENTED) */)
 	return bottie_prep_double(stp, bot_ip, rtip);
