@@ -14,6 +14,8 @@ changes made.  See document footer for additional details.
 --- 2014-XX-XX  Release 7.26.XX                                    ---
 ----------------------------------------------------------------------
 
+* enabled gqa libtie support using the LIBRT_BOT_MINTIE env variable
+        - Ștefan Mirea
 * improved behavior of MGED's draw command - Ștefan Mirea
 * fixed handling of extra whitespace in nirt commands - Ștefan Mirea
 * fixed texture mapping crash with bad image dimensions - Ștefan Mirea
